only resolve directory conflicts if dirId is complete